reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__actions__pipeline.rs_line_700_col_5.log

*** crates/tracewake-core/src/actions/pipeline.rs:700:5: replace accepted_report -> ValidationReport with Default::default()

*** mutation diff:
--- crates/tracewake-core/src/actions/pipeline.rs
+++ replace accepted_report -> ValidationReport with Default::default()
@@ -692,36 +692,17 @@
 }
 
 fn accepted_report(
     proposal: &Proposal,
     checked_facts: Vec<CheckedFact>,
     would_mutate: bool,
     events: Vec<EventEnvelope>,
 ) -> ValidationReport {
-    let event_ids = events.iter().map(|event| event.event_id.clone()).collect();
-    ValidationReport {
-        validation_report_id: report_id(proposal),
-        proposal_id: proposal.proposal_id.clone(),
-        actor_id: proposal.actor_id.clone(),
-        action_id: proposal.action_id.clone(),
-        target_ids: proposal.target_ids.clone(),
-        status: ReportStatus::Accepted,
-        failed_stage: None,
-        reason_codes: Vec::new(),
-        actor_visible_facts: actor_visible_facts(&checked_facts),
-        debug_only_facts: debug_only_facts(&checked_facts),
-        checked_facts,
-        actor_visible_summary: "Accepted.".to_string(),
-        debug_summary: "proposal accepted by shared pipeline".to_string(),
-        would_mutate,
-        event_ids,
-        checksum_before: None,
-        checksum_after: None,
-    }
+    Default::default() /* ~ changed by cargo-mutants ~ */
 }
 
 fn controller_binding_check(
     context: PipelineReadContext<'_>,
     proposal: &Proposal,
     checked_facts: Vec<CheckedFact>,
 ) -> Option<PipelineDecision> {
     if proposal.origin != ProposalOrigin::Human {


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/actions/pipeline.rs` has changed (1781905932.283925277s, 5s after last build at 1781905927.595925278s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `ValidationReport: Default` is not satisfied
   --> crates/tracewake-core/src/actions/pipeline.rs:700:5
    |
700 |     Default::default() /* ~ changed by cargo-mutants ~ */
    |     ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `ValidationReport`
   --> crates/tracewake-core/src/actions/report.rs:215:1
    |
215 | pub struct ValidationReport {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `actions::report::ValidationReport: Default` is not satisfied
   --> crates/tracewake-core/src/actions/pipeline.rs:700:5
    |
700 |     Default::default() /* ~ changed by cargo-mutants ~ */
    |     ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `actions::report::ValidationReport`
   --> crates/tracewake-core/src/actions/report.rs:215:1
    |
215 | pub struct ValidationReport {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
